// DBML generated by AI assistant

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  external_id text [unique, not null, note: "User ID from external authentication system (e.g., Keycloak sub)"]
  email text [unique, not null]
  name text [not null]
  role text [not null, note: "User role (employee, approver, admin) - as per R-8"]
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]
}

Table limit_requests {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id, note: "Request initiator (R-1)"]
  amount decimal [not null, note: "Request amount (R-1)"]
  currency text [not null, note: "Request currency (R-1)"]
  justification text [not null, note: "Justification (R-1)"]
  desired_date date [not null, note: "Desired start date (R-1)"]
  status text [not null, note: "Request status (e.g., PENDING_TEAM_LEAD, PENDING_RISK_OFFICER, PENDING_CFO, APPROVED, REJECTED, COMPLETED) (R-7)"]
  current_approver_id uuid [ref: > users.id, note: "Current approver (R-2, R-4)"]
  created_at timestamp [default: `now()`, not null]
  updated_at timestamp [default: `now()`, not null]
}

Table approval_steps {
  id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [not null, ref: > limit_requests.id, note: "Link to the request (R-5)"]
  approver_id uuid [not null, ref: > users.id, note: "User who performed the action (R-5)"]
  action text [not null, note: "Action (e.g., APPROVED, REJECTED) (R-5)"]
  comment text [note: "Comment (R-5)"]
  assigned_approver_role text [not null, note: "Role assigned for this approval step (e.g., TEAM_LEAD, RISK_OFFICER, CFO)"]
  timestamp timestamp [default: `now()`, not null, note: "Action date and time (R-5)"]
}

Table audit_log {
  id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [ref: > limit_requests.id, note: "Link to the request (R-10)"]
  action text [not null, note: "Action performed (R-10)"]
  actor_id uuid [not null, ref: > users.id, note: "User who performed the action (R-10)"]
  timestamp timestamp [default: `now()`, not null, note: "Action time (R-10)"]
  payload_json jsonb [note: "Action details (R-10)"]
}

Ref: limit_requests.user_id > users.id
Ref: limit_requests.current_approver_id > users.id
Ref: approval_steps.request_id > limit_requests.id
Ref: approval_steps.approver_id > users.id
Ref: audit_log.request_id > limit_requests.id
Ref: audit_log.actor_id > users.id 